# air_download

./: Dockerfile  README.md  Singularity.def  pyproject.toml  run_air_download.py  setup.py
air_download/: __init__.py  air_download.py  cli.py  client.py  filters.py  utils.py
tests/: test_client.py  test_filters.py  test_utils.py
