[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "air_download"
version = "0.3.0"
description = "Command line interface to the Automated Image Retrieval (AIR) Portal. Originally developed by John Colby."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Pierre Nedelec"},
]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=0.19",
    "tqdm>=4.60",
]

[project.urls]
Repository = "https://github.com/rauschecker-sugrue-labs/air_download"

[project.scripts]
air_download = "air_download.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
